header z-index fix

--- a/laravel/resources/sass/_header.scss
+++ b/laravel/resources/sass/_header.scss
@@ -4,6 +4,7 @@
     height: 3rem;
     width: 100%;
     padding: 0 $layout-spacing;
+    z-index: $zindex-0 + 1;
 }
 
 .m-header {
